@@ -1,6 +1,7 @@
 FFmpegThumbnailer
 version ?.?.?
 - Aspect ratio bug fix (Thanks to S. Eguchi)
+- Support input files from stdin (will ignore seek time)
 
 version 1.4.0
 - Filter support added that allows library users to implement filters that will be applied to the frame data
